[package]
name = "usb_screen_client"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
image = "0.25.1"
nusb = "0.1.8"
futures-lite = "2.3.0"
offscreen-canvas = { git = "https://github.com/planet0104/offscreen-canvas", tag = "0.1.9"}
chrono = "0.4.38"
gif-dispose = "5"
gif = { version = "0.13.1", default-features = false}
