[package]
edition = "2021"
name = "usb_screen"
version = "1.1.0"
license = "MIT OR Apache-2.0"

[features]
default = ["st7735-128x160", "usb-serial"]
st7789-240x320 = ["display-interface"]
st7789-240x240 = ["display-interface"]
st7735-128x160 = []
usb-serial = []
usb-raw = []

[dependencies]
embassy-embedded-hal = { version = "0.1.0" }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embassy-rp = { version = "0.1.0", features = ["unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
panic-halt = "0.2.0"
defmt = "0.3"
fixed = "1.23.1"
fixed-macro = "1.2"
once_cell = { version = "1", default-features = false}

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
# heapless = "0.8"
embedded-alloc = "0.5.1"
usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand_core = "0.6.4"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"]}
micromath = "2.1.0"
display-interface = { version = "0.4.1", optional = true}
anyhow = { version = "1", default-features = false}
constcat = "0.5.0"
lz4_flex = { version="0.11.3", default-features = false }
embedded-graphics = "0.8.1"

[profile.release]
debug = 2
